# MiscStuff

./: .gitignore
C/LABYR1/: labyr1  labyr1.c  test  test1  test3  test4
C/MaxColor/: Makefile  g.graph  g2.graph  max_color  max_color.c  mc
C/c_version/: Makefile  expr_parser  expr_parser.c  test1
C/run_as_server/: Makefile  run_as_server  run_as_server.c
Haskell/dimacs/: ChangeLog.md  dimacs.cabal  test.cnf
Haskell/dimacs/lib/Data/: DIMACS.hs
Haskell/dpll/: ChangeLog.md  dpll.cabal  hole6.cnf
Haskell/dpll/src/: Main.hs  Solver.hs  formula
Haskell/lambda_to_mips/: ChangeLog.md  lambda-to-mips.cabal  test.asm  test.lambda
Haskell/lambda_to_mips/src/: Main.hs
Haskell/net_cpu/: ChangeLog.md  net-cpu.cabal
Haskell/netcat_server/: ChangeLog.md  netcat-server.cabal
Haskell/netcat_server/src_client/: Main.hs
Haskell/netcat_server/src_server/: Main.hs
Haskell/sat_solving/: ChangeLog.md  sat-solving.cabal
Haskell/sat_solving/cnf_files/: big.cnf  big.test.cnf  simple.cnf  very_big.ccnf
Haskell/sat_solving/cnf_parser/: Main.hs
Haskell/sat_solving/src/SAT/: Formula.hs
Haskell/scratch/: xml_type.hs
Haskell/snow/: LICENSE  snow.cabal
Haskell/snow/src/: Main.hs
Haskell/tcp_server/: ChangeLog.md  tcp-server.cabal
Haskell/tcp_server/src/: Main.hs
Java/HelloFuckers/: HelloFuckers.java
Prolog/PSH_Tutoren/: PSH_tutoren.pl
